--- a/template/src/manifest.json
+++ b/template/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "name" : "mzi-water-oos",
     "appid" : "",
-    "description" : "智能零售运营系统",
+    "description" : "Afire-template",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
@@ -64,7 +64,7 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 微信小程序特有相关 */
-        "appid" : "wx52eacd2a855182ad",
+        "appid" : "wx64a72a328bed04ac",
         "setting" : {
             "urlCheck" : false,
             "es6" : true,
